--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             background-color: rgba(0, 0, 0, 0); /* Transparent background */
             border: 2px solid rgb(45, 45, 45); /* Border color */
             position: relative; /* Needed for absolute positioning */
+            border-radius: 10px; /* Rounded corners */
         }
 
         .textbox {
@@ -49,7 +50,7 @@
 
         .custom-text {
             font-size: 23px;
-            color: rgb(45, 45, 45); /* Adjusted color to 45,45,45 */
+            color: rgb(109, 108, 108); /* Adjusted color to 45,45,45 */
             font-weight: bold; /* Making the text bold */
             text-align: center; /* Center the text */
             position: absolute;
