--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         .box {
             width: 400px;
-            height: 600px;
+            height: 300px;
             background-color: rgba(0, 0, 0, 0); /* Transparent background */
             border: 2px solid rgb(45, 45, 45); /* Border color */
             position: relative; /* Needed for absolute positioning */
@@ -25,15 +25,11 @@
             animation: fadeIn 1s ease forwards; /* Apply fade-in animation */
         }
 
-        .textbox, .textbox2, .custom-text, .button-container {
-            animation: fadeIn 1s ease forwards; /* Apply fade-in animation */
-        }
-
-        .textbox, .textbox2 {
+        .textbox {
             transition: width 0.5s ease, height 0.5s ease; /* Add smooth transition for width and height */
         }
 
-        .textbox:focus, .textbox2:focus {
+        .textbox:focus {
             width: 80%; /* Keep width same on focus */
             height: 40px; /* Increase height on focus */
         }
@@ -46,19 +42,7 @@
             border-radius: 5px; /* Rounded corners */
             position: absolute;
             left: 10%; /* Position from left */
-            top: calc(40% - 25px); /* Position from top with enough spacing */
-            transform: translateY(-50%); /* Center vertically */
-        }
-
-        .textbox2 {
-            width: 80%;
-            height: 30px;
-            background-color: rgb(45, 45, 45);
-            border: 1px solid black;
-            border-radius: 5px; /* Rounded corners */
-            position: absolute;
-            left: 10%; /* Position from left */
-            top: calc(60% - 25px); /* Position from top with enough spacing */
+            top: calc(50% - 25px); /* Position from top with enough spacing */
             transform: translateY(-50%); /* Center vertically */
         }
 
@@ -76,14 +60,14 @@
         .button-container {
             position: absolute;
             left: 10%;
-            top: calc(80% - 40px); /* Position the button container under the password textbox with enough spacing */
+            top: calc(70% - 40px); /* Position the button container under the password textbox with enough spacing */
             width: 80%;
             display: flex;
             justify-content: space-between; /* Ensure buttons are spaced evenly */
         }
 
         .button {
-            width: 48%; /* Adjust button width to fit within container with spacing */
+            width: 100%; /* Adjust button width to fit within container with spacing */
             height: 40px;
             background-color: rgb(45, 45, 45);
             color: white;
@@ -110,9 +94,8 @@
 </head>
 <body>
     <div class="box">
-        <p class="custom-text">Login<br>Type Whatever You Want</p>
+        <p class="custom-text">Login</p>
         <input type="text" id="username" class="textbox" placeholder="Username">
-        <input type="password" id="password" class="textbox2" placeholder="Password">
         <div class="button-container">
             <button id="loginButton" class="button">Login</button>
             <button class="button">[Coming Soon]</button>
@@ -122,15 +105,30 @@
     <script>
         document.getElementById('loginButton').addEventListener('click', function() {
             var username = document.getElementById('username').value;
-            var password = document.getElementById('password').value;
 
-            if (username === '' || password === '') {
+            if (username === '') {
                 alert('Error, Wrong Login Info');
             } else {
                 // Redirect to main.html
                 window.location.href = 'main.html';
             }
         });
+
+        // Function to fade in main.html when it is loaded
+        function fadeInMain() {
+            document.body.style.opacity = 0; // Start with opacity 0
+            var fadeInInterval = setInterval(function() {
+                // Increase opacity gradually
+                document.body.style.opacity = parseFloat(document.body.style.opacity) + 0.1;
+                // Stop interval when opacity reaches 1
+                if (document.body.style.opacity >= 1) {
+                    clearInterval(fadeInInterval);
+                }
+            }, 100); // Adjust the interval duration for smoother fade-in
+        }
+
+        // Call the fadeInMain function when the page is loaded
+        window.onload = fadeInMain;
     </script>
 </body>
 </html>
