--- a/main.html
+++ b/main.html
@@ -116,10 +116,11 @@
     <div class="roblox-scripts-button" onclick="downloadRobloxScripts()">Roblox Scripts</div> <!-- Updated onclick attribute -->
 
     <!-- Duplicate of Configs button -->
-    <div class="configs-button configs-button-2" onclick="navigateToHome()">Coming Soon</div>
+    <div class="configs-button configs-button-2" onclick="navigateToHome()">Fortnite [ Soon ]</div>
     
     <!-- Duplicate of Configs button -->
-    <div class="configs-button configs-button-3" onclick="navigateToHome()">Coming Soon</div>
+    <div class="configs-button configs-button-3" onclick="navigateToHome()">Rust [ Soon ]</div>
+
 
     <div class="bottom-text">𝙏𝙝𝙚 𝘽𝙚𝙨𝙩 𝙁𝙧𝙚𝙚 𝘾𝙤𝙣𝙛𝙞𝙜 𝙑𝙖𝙪𝙡𝙩 - 𝙎𝙣𝙤
     </div>
