--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
             text-align: justify;
             text-align: center;
             animation: fadeIn 2s ease forwards;
+            font-size: 24px; /* Increased font size */
+            font-weight: bold; /* Bold text */
         }
 
         @keyframes fadeIn {
