--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Down</title>
+    <title>Haunts Configs</title>
     <style>
         * {
             margin: 0;
@@ -22,8 +22,8 @@
 
         .box {
             position: relative;
-            width: 900px;
-            height: 150px;
+            width: 700px;
+            height: 470px; /* Adjusted height */
             display: flex;
             align-items: center;
             justify-content: center;
@@ -38,7 +38,7 @@
             position: absolute;
             width: 88%;
             height: 140%;
-            background-color: rgb(191, 3, 248);
+            background-color: rgb(112, 3, 255);
             animation: animate 14s linear infinite;
             z-index: 1;
         }
@@ -47,7 +47,7 @@
             content: '';
             position: absolute;
             inset: 10px;
-            background-color: rgb(70, 70, 70);
+            background-color: rgb(30, 31, 31);
             border-radius: 16px;
             z-index: 1;
         }
@@ -63,102 +63,109 @@
         }
 
         .inner-box {
-            display: block;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             z-index: 2;
             padding: 20px;
             text-align: justify;
             text-align: center;
-            animation: fadeIn 2s ease forwards;
-            font-size: 24px; /* Increased font size */
-            font-weight: bold; /* Bold text */
         }
 
-        @keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-
-            100% {
-                opacity: 1;
-            }
+        .license-textbox {
+            width: 400px; /* Increased width */
+            height: 40px;
+            font-size: 16px;
+            border: 2px solid #ccc;
+            border-radius: 5px;
+            padding: 5px;
+            margin-bottom: 20px;
+            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+            background-color: rgb(45, 45, 45); /* Changed background color */
+            color: #fff; /* Text color */
+            transition: border-width 0.3s ease; /* Smooth transition for border-width change */
         }
 
-        /* Added styles for buttons */
-        .button-container {
-            position: fixed;
-            bottom: 20px;
-            left: 20px;
-            display: flex;
-            gap: 10px;
+        .license-textbox:focus {
+            border-width: 4px; /* Increase border thickness when focused */
         }
 
-        .button {
-            padding: 10px 20px;
-            background-color: #ea02ff;
-            color: white;
+        .discord-name-textbox {
+            width: 400px; /* Added Discord name input */
+            height: 40px;
+            font-size: 16px;
+            border: 2px solid #ccc;
+            border-radius: 5px;
+            padding: 5px;
+            margin-bottom: 20px;
+            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+            background-color: rgb(45, 45, 45); /* Changed background color */
+            color: #fff; /* Text color */
+            transition: border-width 0.3s ease; /* Smooth transition for border-width change */
+        }
+
+        .discord-name-textbox:focus {
+            border-width: 4px; /* Increase border thickness when focused */
+        }
+
+        .submit-button {
+            width: 150px;
+            height: 40px;
+            font-size: 16px;
             border: none;
             border-radius: 5px;
+            padding: 5px;
+            margin-bottom: 20px;
+            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+            background-color: rgb(142, 3, 255);
+            color: #fff;
+            transition: transform 0.3s ease; /* Smooth transition for size change */
             cursor: pointer;
-            font-size: 16px;
         }
 
-        /* Added style for volume slider */
-        #volumeControl {
-            position: fixed;
-            bottom: 80px; /* Adjust according to your layout */
-            left: 20px;
-            width: 150px;
+        .submit-button:hover {
+            transform: scale(1.05); /* Increase size on hover */
         }
-
     </style>
 </head>
 
 <body>
-    <div class="box ">
+    <div class="box">
         <div class="inner-box">
-            We're sorry, but this site is currently under maintenance. Please check back later.
+            <input type="text" class="license-textbox" placeholder="License" id="licenseTextbox">
+            <input type="text" class="discord-name-textbox" placeholder="Your Discord Name [[ OPTIONAL ]]" id="discordNameTextbox">
+            <button class="submit-button" id="submitButton">Submit</button>
         </div>
     </div>
 
-    <!-- Added volume control -->
-    <input type="range" id="volumeControl" min="0" max="100" step="1" value="50">
-
-    <!-- Added button container and buttons -->
-    <div class="button-container">
-        <button class="button" id="playButton">Play/Pause</button>
-        <button class="button" id="skipButton">Skip Song</button>
-    </div>
-
     <script>
-        const songs = [
-            "https://raw.githubusercontent.com/fullyhaunted/haunted.com/main/Playboi%20Carti%20-%20Sky%20(Official%20Audio).mp3",
-            "https://raw.githubusercontent.com/fullyhaunted/haunted.com/main/Tay%20K%20-%20The%20Race%20%5BOfficial%20Audio%5D.mp3",
-            "https://raw.githubusercontent.com/fullyhaunted/haunted.com/main/Ken%20Carson%20-%20Succubus%20(Official%20Music%20Video).mp3",
-            "https://raw.githubusercontent.com/fullyhaunted/haunted.com/main/Coffin.mp3"
-        ];
+        const licenseTextbox = document.getElementById('licenseTextbox');
+        const discordNameTextbox = document.getElementById('discordNameTextbox');
+        const submitButton = document.getElementById('submitButton');
 
-        let currentSongIndex = 0;
-        const audio = new Audio(songs[currentSongIndex]);
+        licenseTextbox.addEventListener('focus', function () {
+            this.style.borderColor = 'rgb(142, 3, 255)';
+        });
 
-        document.getElementById("playButton").addEventListener("click", function() {
-            if (audio.paused) {
-                audio.play();
+        licenseTextbox.addEventListener('blur', function () {
+            this.style.borderColor = '#ccc';
+        });
+
+        submitButton.addEventListener('click', function () {
+            const licenseValue = licenseTextbox.value.trim();
+            const discordName = discordNameTextbox.value.trim();
+            const requiredLicense = 'W0aIoF-WwQ2m3-klOKnj-aJdSYX-UdK4lh-OSrNru';
+
+            if (licenseValue === requiredLicense) {
+                sendMessageToDiscord(discordName);
+                window.location.href = 'main.html';
             } else {
-                audio.pause();
+                alert('Invalid license.');
             }
         });
 
-        document.getElementById("skipButton").addEventListener("click", function() {
-            currentSongIndex = (currentSongIndex + 1) % songs.length;
-            audio.src = songs[currentSongIndex];
-            audio.play(); // Ensure the audio plays after setting the source
-        });
 
-        // Volume control
-        document.getElementById("volumeControl").addEventListener("input", function() {
-            // Map the input range logarithmically to the volume range
-            audio.volume = Math.pow(10, (this.value / 100) - 1);
-        });
     </script>
 </body>
 
