--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Haunts Configs</title>
+    <title>Down</title>
     <style>
         * {
             margin: 0;
@@ -22,8 +22,8 @@
 
         .box {
             position: relative;
-            width: 700px;
-            height: 470px; /* Adjusted height */
+            width: 900px;
+            height: 150px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -38,7 +38,7 @@
             position: absolute;
             width: 88%;
             height: 140%;
-            background-color: rgb(112, 3, 255);
+            background-color: rgb(191, 3, 248);
             animation: animate 14s linear infinite;
             z-index: 1;
         }
@@ -47,7 +47,7 @@
             content: '';
             position: absolute;
             inset: 10px;
-            background-color: rgb(30, 31, 31);
+            background-color: rgb(70, 70, 70);
             border-radius: 16px;
             z-index: 1;
         }
@@ -63,93 +63,32 @@
         }
 
         .inner-box {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
+            display: block;
             z-index: 2;
             padding: 20px;
             text-align: justify;
             text-align: center;
+            animation: fadeIn 2s ease forwards;
         }
 
-        .license-textbox,
-        .discord-name-textbox {
-            width: 400px; /* Increased width */
-            height: 40px;
-            font-size: 16px;
-            border: 2px solid #ccc;
-            border-radius: 5px;
-            padding: 5px;
-            margin-bottom: 20px;
-            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-            background-color: rgb(45, 45, 45); /* Changed background color */
-            color: #fff; /* Text color */
-            transition: border-width 0.3s ease; /* Smooth transition for border-width change */
-        }
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
 
-        .license-textbox:focus,
-        .discord-name-textbox:focus {
-            border-width: 4px; /* Increase border thickness when focused */
-        }
-
-        .submit-button {
-            width: 150px;
-            height: 40px;
-            font-size: 16px;
-            border: none;
-            border-radius: 5px;
-            padding: 5px;
-            margin-bottom: 20px;
-            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-            background-color: rgb(142, 3, 255);
-            color: #fff;
-            transition: transform 0.3s ease; /* Smooth transition for size change */
-            cursor: pointer;
-        }
-
-        .submit-button:hover {
-            transform: scale(1.05); /* Increase size on hover */
+            100% {
+                opacity: 1;
+            }
         }
     </style>
 </head>
 
 <body>
-    <div class="box">
+    <div class="box ">
         <div class="inner-box">
-            <input type="text" class="license-textbox" placeholder="License" id="licenseTextbox">
-            <input type="text" class="discord-name-textbox" placeholder="Your Discord Name [[ OPTIONAL ]]" id="discordNameTextbox">
-            <button class="submit-button" id="submitButton">Submit</button>
+            We're sorry, but this site is currently under maintenance. Please check back later.
         </div>
     </div>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const licenseTextbox = document.getElementById('licenseTextbox');
-            const discordNameTextbox = document.getElementById('discordNameTextbox');
-            const submitButton = document.getElementById('submitButton');
-
-            licenseTextbox.addEventListener('focus', function () {
-                this.style.borderColor = 'rgb(142, 3, 255)';
-            });
-
-            licenseTextbox.addEventListener('blur', function () {
-                this.style.borderColor = '#ccc';
-            });
-
-            submitButton.addEventListener('click', function () {
-                const licenseValue = licenseTextbox.value.trim();
-                const discordName = discordNameTextbox.value.trim();
-                const requiredLicense = 'W0aIoF-WwQ2m3-klOKnj-aJdSYX-UdK4lh-OSrNru';
-
-                if (licenseValue === requiredLicense) {
-                    window.location.href = 'main.html';
-                } else {
-                    alert('Invalid license.');
-                }
-            });
-        });
-    </script>
 </body>
 
 </html>
