--- a/index.html
+++ b/index.html
@@ -1,94 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Down</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sorry, We're Down. Come Back Soon!</title>
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    background-color: #0c0c0c;
+    color: white;
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
 
-        body {
-            background-color: rgb(12, 12, 12);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-        }
+  .rainbow-text {
+    font-size: 24px;
+    animation: rainbow 5s infinite;
+  }
 
-        .box {
-            position: relative;
-            width: 900px;
-            height: 150px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
-            border-radius: 20px;
-            border: 1px solid black;
-            z-index: 1;
-        }
-
-        .box::before {
-            content: '';
-            position: absolute;
-            width: 88%;
-            height: 140%;
-            background-color: rgb(191, 3, 248);
-            animation: animate 14s linear infinite;
-            z-index: 1;
-        }
-
-        .box::after {
-            content: '';
-            position: absolute;
-            inset: 10px;
-            background-color: rgb(70, 70, 70);
-            border-radius: 16px;
-            z-index: 1;
-        }
-
-        @keyframes animate {
-            0% {
-                transform: rotate(0deg);
-            }
-
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-
-        .inner-box {
-            display: block;
-            z-index: 2;
-            padding: 20px;
-            text-align: justify;
-            text-align: center;
-            animation: fadeIn 2s ease forwards;
-        }
-
-        @keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-
-            100% {
-                opacity: 1;
-            }
-        }
-    </style>
+  @keyframes rainbow {
+    0% { color: red; }
+    16.666% { color: orange; }
+    33.333% { color: yellow; }
+    50% { color: green; }
+    66.666% { color: blue; }
+    83.333% { color: indigo; }
+    100% { color: violet; }
+  }
+</style>
 </head>
-
 <body>
-    <div class="box ">
-        <div class="inner-box">
-            We're sorry, but this site is currently under maintenance. Please check back later.
-        </div>
-    </div>
+  <div class="rainbow-text">Sorry, We're Down. Come Back Soon!</div>
 </body>
-
 </html>
